[package]
name = "gateway-mfr"
version = "0.3.2"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "gateway_mfr"
path = "src/main.rs"
doc = false

[dependencies]
structopt = "0"
anyhow = "1"
semver = "0"
serde = {version = "1", features = ["derive"]}
rand = "0.8"
serde_json = "1"
serde_urlencoded = "*"
http = "0"
bytes = "*"
angry-purple-tiger = "0"
helium-crypto = "0.6"

[features]
tpm = [ "helium-crypto/tpm" ]
ecc608 = [ "helium-crypto/ecc608" ]
