[package]
name = "gateway-mfr"
version = "0.4.2"
authors = ["Marc Nijdam <marc@nova-labs.com>"]
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "gateway_mfr"
path = "src/main.rs"
doc = false

[dependencies]
clap = {version = "4", features = ["derive"]}
anyhow = "1"
semver = "0"
serde = {version = "1", features = ["derive"]}
rand = "0.8"
serde_json = "1"
serde_urlencoded = "*"
http = "0"
bytes = "*"
angry-purple-tiger = "0"
helium-crypto = "*"
gateway-security = { git = "https://github.com/helium/gateway-security-rs.git", branch = "madninja/expand_devices" }

[features]
default = ["ecc608"]
tpm = [ "gateway-security/tpm" ]
ecc608 = [ "gateway-security/ecc608" ]
nova-tz = [ "gateway-security/nova-tz" ]

