[package]
name = "gateway-mfr"
version = "0.5.3"
authors = ["Marc Nijdam <marc@helium.com>"]
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "gateway_mfr"
path = "src/main.rs"
doc = false

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
semver = "0"
serde = { version = "1", features = ["derive"] }
toml = { version = "0" }
rand = "0.8"
serde_json = "1"
serde_urlencoded = "*"
http = "0"
bytes = "*"
angry-purple-tiger = "0"
helium-crypto = { version = ">=0.8" }

[features]
default = ["ecc608"]
tpm = ["helium-crypto/tpm"]
ecc608 = ["helium-crypto/ecc608"]
nova-tz = ["helium-crypto/nova-tz"]
